# Diabetes-Calculator

./: CMakeLists.txt  diabetes.cpp  diabetes.h  gotoxy.h  main.cpp  rlutil.h
